--- a/api/package.json
+++ b/api/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "api",
+  "name": "school-management-system",
   "version": "1.0.0",
-  "description": "",
+  "description": "School Management System Project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js", 
+    "dev": "nodemon server.js",
+    "server": "cd api && npm start",
+    "client": "cd frontend && npm start",
+    "all": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnuragMishra358/School-Management-System.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/AnuragMishra358/School-Management-System/issues"
+  },
+  "homepage": "https://github.com/AnuragMishra358/School-Management-System#readme",
   "dependencies": {
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
@@ -26,6 +38,7 @@
     "multer": "^2.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "concurrently": "^9.2.0"
   }
 }
